Use our easyblocks from 2019b

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -44,19 +44,17 @@ jobs:
       run: |
           cd $HOME
           # first determine which branch of easybuild-framework repo to install
-          BRANCH=develop
+          # use our '2019b' branch of framework/easyblocks, except when testing 'master' or '4.x' branches
+          BRANCH=2019b
           if [ "x$GITHUB_BASE_REF" = 'xmaster' ]; then BRANCH=master; fi
           if [ "x$GITHUB_BASE_REF" = 'x4.x' ]; then BRANCH=4.x; fi
           echo "Using easybuild-framework branch $BRANCH (\$GITHUB_BASE_REF $GITHUB_BASE_REF)"
-
-          git clone -b $BRANCH --depth 10 --single-branch https://github.com/easybuilders/easybuild-framework.git
+          git clone -b $BRANCH --depth 10 --single-branch https://github.com/bear-rsg/easybuild-framework.git
           cd easybuild-framework; git log -n 1; cd -
           pip install $PWD/easybuild-framework
-
-          git clone -b $BRANCH --depth 10 --single-branch https://github.com/hpcugent/easybuild-easyblocks.git
+          git clone -b $BRANCH --depth 10 --single-branch https://github.com/bear-rsg/easybuild-easyblocks.git
           cd easybuild-easyblocks; git log -n 1; cd -
           pip install $PWD/easybuild-easyblocks
-
     - name: install modules tool
       run: |
           cd $HOME
