--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -128,5 +128,5 @@ jobs:
           eb --search '^foss-2018b.eb' | tee eb_search_foss.out
           grep '/foss-2018b.eb$' eb_search_foss.out
 
-          # try installing bzip2 with system toolchain (requires EB_bzip2 easyblock + easyconfig)
-          eb --prefix /tmp/$USER/$GITHUB_SHA bzip2-1.0.6.eb
+          # try installing M4 with system toolchain (requires ConfigureMake easyblock + easyconfig)
+          eb --prefix /tmp/$USER/$GITHUB_SHA M4-1.4.18.eb
