--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ matrix:
     # other test configurations in GitHub Actions (see .github/workflows/unit_tests.yml)
     - python: 2.7
       env: LMOD_VERSION=7.8.22
-    - python: 3.6
-      env: LMOD_VERSION=7.8.22
+    #- python: 3.6
+    #  env: LMOD_VERSION=7.8.22
 addons:
   apt:
     packages:
