--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -149,6 +149,8 @@ jobs:
 
     - name: set up Python
       uses: actions/setup-python@v1
+      with:
+        python-version: ${{matrix.python}}
 
     - name: Create source distribution
       run: python setup.py sdist
